[tool.poetry]
name = "mce-spec-inference"
version = "0.1.0"
description = "Maximum Causal Entropy Specification Inference."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
readme="README.md"
repository = "https://github.com/mvcisback/mce-spec-inference"
packages = [
    { include = "mce"},
]

[tool.poetry.dependencies]
attrs = "^19.3"
bdd2dfa = "^0.4.0"
bidict = "^0.18.3"
dfa = {version = "^2.0.0", extras = ["draw"]}
fold-bdd = "^0.6.0"
funcy = "^1.13"
multiprocess = "^0.70.9"
py-aiger-bdd = "^0.3.1"
py-aiger-bv = "^2.0.0"
py-aiger-coins = {version = "^1.4.0", extras = ["sat", "bdd"]}
python = "^3.7"
scipy = "^1.4.1"
py-aiger-sat = "^1.1.0"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
hypothesis = "^4.42"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-xdist = "^1.29"
py-aiger-gridworld = "^0.2.0"
termplotlib = "^0.2.4"
blessings = "^1.7"
dd2nx = "^0.1.2"
py-aiger-ptltl = "^1.2.0"
matplotlib = "^3.2.1"
pygraphviz = "^1.5"
pyyaml = "^5.3.1"
compress_json = "^1.0.3"
seaborn = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
